@@ -1,6 +1,7 @@
 package com.carwash.car_wash_api.config;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -29,6 +30,9 @@ public class SecurityConfig {
         private final AuthenticationEntryPoint authEntryPoint;
         private final CustomAccessDeniedHandler accessDeniedHandler;
 
+        @Value("${app.cors.allowed-origins}")
+        private String corsAllowedOrigins;
+
         @Bean
         public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
                 http
@@ -54,7 +58,10 @@ public class SecurityConfig {
                                                 
                                                 // Admin management routes
                                                 .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
-                                                
+
+                                                // Users may delete their own account (must come before the broad DELETE rule)
+                                                .requestMatchers(HttpMethod.DELETE, "/api/v1/users/me").authenticated()
+
                                                 // Broad restriction: Only ADMIN can perform DELETE operations across the API
                                                 .requestMatchers(HttpMethod.DELETE, "/api/v1/**").hasRole("ADMIN")
 
@@ -88,7 +95,10 @@ public class SecurityConfig {
                                                 // Employee management: admin manages all employees; employees can only read their own profile and assignments
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/employees/me").hasAnyRole("ADMIN", "EMPLOYEE")
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/employees/me/bookings/today").hasAnyRole("ADMIN", "EMPLOYEE")
+                                                .requestMatchers(HttpMethod.GET, "/api/v1/employees/me/bookings/today/details").hasAnyRole("ADMIN", "EMPLOYEE")
+                                                .requestMatchers(HttpMethod.GET, "/api/v1/employees/me/bookings/history/details").hasAnyRole("ADMIN", "EMPLOYEE")
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/employees/*/bookings").hasAnyRole("ADMIN", "EMPLOYEE")
+                                                .requestMatchers(HttpMethod.GET, "/api/v1/employees/*/bookings/details").hasAnyRole("ADMIN", "EMPLOYEE")
                                                 .requestMatchers("/api/v1/employees/**").hasRole("ADMIN")
 
                                                 // Customer list: admin only
@@ -99,6 +109,8 @@ public class SecurityConfig {
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/dashboard/customer").hasRole("CUSTOMER")
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/dashboard/employee").hasRole("EMPLOYEE")
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/dashboard/revenue").hasRole("ADMIN")
+                                                .requestMatchers(HttpMethod.GET, "/api/v1/dashboard/bookings-by-service").hasRole("ADMIN")
+                                                .requestMatchers(HttpMethod.GET, "/api/v1/dashboard/activity-heatmap").hasRole("ADMIN")
 
                                                 // Settings endpoints: reads for admin/employee, writes for admin only
                                                 .requestMatchers(HttpMethod.GET, "/api/v1/settings/**").hasAnyRole("ADMIN", "EMPLOYEE")
@@ -125,7 +137,8 @@ public class SecurityConfig {
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+                String[] origins = corsAllowedOrigins.split(",");
+                configuration.setAllowedOrigins(Arrays.asList(origins));
                 configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
                 configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
                 configuration.setAllowCredentials(true);
